--- a/app/src/main/res/layout/find_info.xml
+++ b/app/src/main/res/layout/find_info.xml
@@ -32,10 +32,11 @@
 
             <LinearLayout
                 android:layout_width="180dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingLeft="10dp"
-                android:paddingTop="15dp">
+                android:paddingTop="15dp"
+                android:layout_gravity="top">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -51,7 +52,7 @@
                     <TextView
                         android:id="@+id/pfind_name"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="match_parent" />
 
                 </LinearLayout>
 
@@ -70,7 +71,7 @@
                     <TextView
                         android:id="@+id/pfind_date"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="24dp" />
 
                 </LinearLayout>
 
